[package]
name = "shawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
serde_json = "1.0.91"
futures = "0.3.25"
rand = "0.8.5"
ipnet = "2.7.0"
signal-hook = "0.3.14"
clap = "4.0.32"
tokio-postgres = "0.7.7"
rpassword = "7.2.0"
async-minecraft-ping = "0.8.0"
chrono = "0.4.23"
varint = "0.9.0"